[tool.poetry]
name = "http-check"
version = "0.1.0"
description = ""
authors = ["Jonathan Farias <jonathan.developer10@gmail.com>"]
readme = "README.md"
packages = [{include = "http_check"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
flask-crontab = "^0.1.2"
flask-talisman = "^1.0.0"
flask-apscheduler = "^1.12.4"
datetime = "^4.7"
requests = "^2.28.1"
json2html = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
