[tool.poetry]
name = "http-check"
version = "0.1.0"
description = ""
authors = ["Jonathan Farias <jonathan.developer10@gmail.com>"]
readme = "README.md"
packages = [{include = "http_check"}]

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.9.1.post1"
datetime = "^4.7"
flask = "^2.2.2"
flask-apscheduler = "^1.12.4"
flask-login = "^0.6.2"
flask-marshmallow = "^0.14.0"
flask-session = "^0.4.0"
flask-sqlalchemy = "^3.0.2"
flask-talisman = "^1.0.0"
gunicorn = "^20.1.0"
json2html = "^1.3.0"
marshmallow-sqlalchemy = "^0.28.1"
python-dotenv = "^1.0.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
